src/edu/eltech/moevm/autogen/y.output
   0  $accept : root $end

   1  primary_expression : IDENTIFIER
   2                     | CONSTANT
   3                     | STRING_LITERAL
   4                     | RBLEFT expression RBRIGHT

   5  postfix_expression : primary_expression
   6                     | postfix_expression BRACKETLEFT expression BRACKETRIGHT
   7                     | postfix_expression RBLEFT RBRIGHT
   8                     | postfix_expression RBLEFT argument_expression_list RBRIGHT
   9                     | postfix_expression INC_OP
  10                     | postfix_expression DEC_OP

  11  argument_expression_list : assignment_expression
  12                           | argument_expression_list COMMA assignment_expression

  13  unary_expression : postfix_expression
  14                   | INC_OP unary_expression
  15                   | DEC_OP unary_expression
  16                   | MINUS cast_expression
  17                   | EXCL cast_expression
  18                   | SIZEOF unary_expression
  19                   | SIZEOF RBLEFT type_specifier RBRIGHT
  20                   | RE RBLEFT CONSTANT RBRIGHT
  21                   | RE RBLEFT IDENTIFIER RBRIGHT
  22                   | IM RBLEFT CONSTANT RBRIGHT
  23                   | IM RBLEFT IDENTIFIER RBRIGHT
  24                   | MOD RBLEFT CONSTANT RBRIGHT
  25                   | MOD RBLEFT IDENTIFIER RBRIGHT

  26  cast_expression : unary_expression
  27                  | RBLEFT type_specifier RBRIGHT cast_expression

  28  multiplicative_expression : cast_expression
  29                            | multiplicative_expression STAR cast_expression
  30                            | multiplicative_expression SLASH cast_expression
  31                            | multiplicative_expression PERCENT cast_expression

  32  additive_expression : multiplicative_expression
  33                      | additive_expression PLUS multiplicative_expression
  34                      | additive_expression MINUS multiplicative_expression

  35  shift_expression : additive_expression
  36                   | shift_expression LEFT_OP additive_expression
  37                   | shift_expression RIGHT_OP additive_expression

  38  relational_expression : shift_expression
  39                        | relational_expression LESS shift_expression
  40                        | relational_expression GREATER shift_expression
  41                        | relational_expression LE_OP shift_expression
  42                        | relational_expression GE_OP shift_expression

  43  equality_expression : relational_expression
  44                      | equality_expression EQ_OP relational_expression
  45                      | equality_expression NE_OP relational_expression

  46  and_expression : equality_expression
  47                 | and_expression AMP equality_expression

  48  exclusive_or_expression : and_expression
  49                          | exclusive_or_expression CARET and_expression

  50  inclusive_or_expression : exclusive_or_expression
  51                          | inclusive_or_expression BAR exclusive_or_expression

  52  logical_and_expression : inclusive_or_expression
  53                         | logical_and_expression AND_OP inclusive_or_expression

  54  logical_or_expression : logical_and_expression
  55                        | logical_or_expression OR_OP logical_and_expression

  56  conditional_expression : logical_or_expression
  57                         | logical_or_expression QUESTION expression COLON conditional_expression

  58  assignment_expression : conditional_expression
  59                        | unary_expression EQUAL assignment_expression

  60  expression : assignment_expression
  61             | expression COMMA assignment_expression

  62  constant_expression : conditional_expression

  63  declaration : declaration_specifiers SEMICOLON
  64              | declaration_specifiers init_declarator_list SEMICOLON

  65  declaration_specifiers : type_specifier
  66                         | type_specifier declaration_specifiers

  67  init_declarator_list : init_declarator
  68                       | init_declarator_list COMMA init_declarator

  69  init_declarator : direct_declarator
  70                  | direct_declarator EQUAL initializer

  71  type_specifier : VOID
  72                 | COMPLEX
  73                 | CHAR
  74                 | SHORT
  75                 | INT
  76                 | LONG
  77                 | FLOAT
  78                 | DOUBLE
  79                 | BOOL

  80  specifier_qualifier_list : type_specifier specifier_qualifier_list
  81                           | type_specifier

  82  direct_declarator : IDENTIFIER
  83                    | RBLEFT direct_declarator RBRIGHT
  84                    | direct_declarator BRACKETLEFT constant_expression BRACKETRIGHT
  85                    | direct_declarator BRACKETLEFT BRACKETRIGHT
  86                    | direct_declarator RBLEFT parameter_list RBRIGHT
  87                    | direct_declarator RBLEFT identifier_list RBRIGHT
  88                    | direct_declarator RBLEFT RBRIGHT

  89  parameter_list : parameter_declaration
  90                 | parameter_list COMMA parameter_declaration

  91  parameter_declaration : declaration_specifiers direct_declarator
  92                        | declaration_specifiers abstract_declarator
  93                        | declaration_specifiers

  94  identifier_list : IDENTIFIER
  95                  | identifier_list COMMA IDENTIFIER

  96  abstract_declarator : direct_abstract_declarator

  97  direct_abstract_declarator : RBLEFT abstract_declarator RBRIGHT
  98                             | BRACKETLEFT BRACKETRIGHT
  99                             | BRACKETLEFT constant_expression BRACKETRIGHT
 100                             | direct_abstract_declarator BRACKETLEFT BRACKETRIGHT
 101                             | direct_abstract_declarator BRACKETLEFT constant_expression BRACKETRIGHT
 102                             | RBLEFT RBRIGHT
 103                             | RBLEFT parameter_list RBRIGHT
 104                             | direct_abstract_declarator RBLEFT RBRIGHT
 105                             | direct_abstract_declarator RBLEFT parameter_list RBRIGHT

 106  initializer : assignment_expression
 107              | BRACELEFT initializer_list BRACERIGHT
 108              | BRACELEFT initializer_list COMMA BRACERIGHT

 109  initializer_list : initializer
 110                   | initializer_list COMMA initializer

 111  statement : labeled_statement
 112            | compound_statement
 113            | expression_statement
 114            | selection_statement
 115            | iteration_statement
 116            | jump_statement

 117  labeled_statement : IDENTIFIER COLON statement
 118                    | CASE constant_expression COLON statement
 119                    | DEFAULT COLON statement

 120  compound_statement : BRACELEFT BRACERIGHT
 121                     | BRACELEFT statement_list BRACERIGHT
 122                     | BRACELEFT declaration_list BRACERIGHT
 123                     | BRACELEFT declaration_list statement_list BRACERIGHT

 124  declaration_list : declaration
 125                   | declaration_list declaration

 126  statement_list : statement
 127                 | statement_list statement

 128  expression_statement : SEMICOLON
 129                       | expression SEMICOLON

 130  selection_statement : IF RBLEFT expression RBRIGHT statement ELSE statement
 131                      | SWITCH RBLEFT expression RBRIGHT statement

 132  iteration_statement : WHILE RBLEFT expression RBRIGHT statement
 133                      | DO statement WHILE RBLEFT expression RBRIGHT SEMICOLON
 134                      | FOR RBLEFT expression_statement expression_statement RBRIGHT statement
 135                      | FOR RBLEFT expression_statement expression_statement expression RBRIGHT statement

 136  jump_statement : GOTO IDENTIFIER SEMICOLON
 137                 | BREAK SEMICOLON
 138                 | RETURN SEMICOLON
 139                 | RETURN expression SEMICOLON

 140  root : translation_unit

 141  translation_unit : external_declaration
 142                   | translation_unit external_declaration

 143  external_declaration : function_definition
 144                       | declaration

 145  function_definition : declaration_specifiers direct_declarator declaration_list compound_statement
 146                      | declaration_specifiers direct_declarator compound_statement
 147                      | direct_declarator declaration_list compound_statement
 148                      | direct_declarator compound_statement

state 0
	$accept : . root $end  (0)

	IDENTIFIER  shift 1
	CHAR  shift 2
	SHORT  shift 3
	INT  shift 4
	LONG  shift 5
	FLOAT  shift 6
	DOUBLE  shift 7
	VOID  shift 8
	COMPLEX  shift 9
	BOOL  shift 10
	RBLEFT  shift 11
	.  error

	root  goto 12
	type_specifier  goto 13
	declaration  goto 14
	declaration_specifiers  goto 15
	direct_declarator  goto 16
	translation_unit  goto 17
	external_declaration  goto 18
	function_definition  goto 19


state 1
	direct_declarator : IDENTIFIER .  (82)

	.  reduce 82


state 2
	type_specifier : CHAR .  (73)

	.  reduce 73


state 3
	type_specifier : SHORT .  (74)

	.  reduce 74


state 4
	type_specifier : INT .  (75)

	.  reduce 75


state 5
	type_specifier : LONG .  (76)

	.  reduce 76


state 6
	type_specifier : FLOAT .  (77)

	.  reduce 77


state 7
	type_specifier : DOUBLE .  (78)

	.  reduce 78


state 8
	type_specifier : VOID .  (71)

	.  reduce 71


state 9
	type_specifier : COMPLEX .  (72)

	.  reduce 72


state 10
	type_specifier : BOOL .  (79)

	.  reduce 79


state 11
	direct_declarator : RBLEFT . direct_declarator RBRIGHT  (83)

	IDENTIFIER  shift 1
	RBLEFT  shift 11
	.  error

	direct_declarator  goto 20


state 12
	$accept : root . $end  (0)

	$end  accept


state 13
	declaration_specifiers : type_specifier .  (65)
	declaration_specifiers : type_specifier . declaration_specifiers  (66)

	CHAR  shift 2
	SHORT  shift 3
	INT  shift 4
	LONG  shift 5
	FLOAT  shift 6
	DOUBLE  shift 7
	VOID  shift 8
	COMPLEX  shift 9
	BOOL  shift 10
	IDENTIFIER  reduce 65
	SEMICOLON  reduce 65
	COMMA  reduce 65
	RBLEFT  reduce 65
	RBRIGHT  reduce 65
	BRACKETLEFT  reduce 65

	type_specifier  goto 13
	declaration_specifiers  goto 21


state 14
	external_declaration : declaration .  (144)

	.  reduce 144


state 15
	declaration : declaration_specifiers . SEMICOLON  (63)
	declaration : declaration_specifiers . init_declarator_list SEMICOLON  (64)
	function_definition : declaration_specifiers . direct_declarator declaration_list compound_statement  (145)
	function_definition : declaration_specifiers . direct_declarator compound_statement  (146)

	IDENTIFIER  shift 1
	SEMICOLON  shift 22
	RBLEFT  shift 11
	.  error

	init_declarator_list  goto 23
	init_declarator  goto 24
	direct_declarator  goto 25


state 16
	direct_declarator : direct_declarator . BRACKETLEFT constant_expression BRACKETRIGHT  (84)
	direct_declarator : direct_declarator . BRACKETLEFT BRACKETRIGHT  (85)
	direct_declarator : direct_declarator . RBLEFT parameter_list RBRIGHT  (86)
	direct_declarator : direct_declarator . RBLEFT identifier_list RBRIGHT  (87)
	direct_declarator : direct_declarator . RBLEFT RBRIGHT  (88)
	function_definition : direct_declarator . declaration_list compound_statement  (147)
	function_definition : direct_declarator . compound_statement  (148)

	CHAR  shift 2
	SHORT  shift 3
	INT  shift 4
	LONG  shift 5
	FLOAT  shift 6
	DOUBLE  shift 7
	VOID  shift 8
	COMPLEX  shift 9
	BOOL  shift 10
	BRACELEFT  shift 26
	RBLEFT  shift 27
	BRACKETLEFT  shift 28
	.  error

	type_specifier  goto 13
	declaration  goto 29
	declaration_specifiers  goto 30
	compound_statement  goto 31
	declaration_list  goto 32


state 17
	root : translation_unit .  (140)
	translation_unit : translation_unit . external_declaration  (142)

	IDENTIFIER  shift 1
	CHAR  shift 2
	SHORT  shift 3
	INT  shift 4
	LONG  shift 5
	FLOAT  shift 6
	DOUBLE  shift 7
	VOID  shift 8
	COMPLEX  shift 9
	BOOL  shift 10
	RBLEFT  shift 11
	$end  reduce 140

	type_specifier  goto 13
	declaration  goto 14
	declaration_specifiers  goto 15
	direct_declarator  goto 16
	external_declaration  goto 33
	function_definition  goto 19


state 18
	translation_unit : external_declaration .  (141)

	.  reduce 141


state 19
	external_declaration : function_definition .  (143)

	.  reduce 143


state 20
	direct_declarator : RBLEFT direct_declarator . RBRIGHT  (83)
	direct_declarator : direct_declarator . BRACKETLEFT constant_expression BRACKETRIGHT  (84)
	direct_declarator : direct_declarator . BRACKETLEFT BRACKETRIGHT  (85)
	direct_declarator : direct_declarator . RBLEFT parameter_list RBRIGHT  (86)
	direct_declarator : direct_declarator . RBLEFT identifier_list RBRIGHT  (87)
	direct_declarator : direct_declarator . RBLEFT RBRIGHT  (88)

	RBLEFT  shift 27
	RBRIGHT  shift 34
	BRACKETLEFT  shift 28
	.  error


state 21
	declaration_specifiers : type_specifier declaration_specifiers .  (66)

	.  reduce 66


state 22
	declaration : declaration_specifiers SEMICOLON .  (63)

	.  reduce 63


state 23
	declaration : declaration_specifiers init_declarator_list . SEMICOLON  (64)
	init_declarator_list : init_declarator_list . COMMA init_declarator  (68)

	SEMICOLON  shift 35
	COMMA  shift 36
	.  error


state 24
	init_declarator_list : init_declarator .  (67)

	.  reduce 67


state 25
	init_declarator : direct_declarator .  (69)
	init_declarator : direct_declarator . EQUAL initializer  (70)
	direct_declarator : direct_declarator . BRACKETLEFT constant_expression BRACKETRIGHT  (84)
	direct_declarator : direct_declarator . BRACKETLEFT BRACKETRIGHT  (85)
	direct_declarator : direct_declarator . RBLEFT parameter_list RBRIGHT  (86)
	direct_declarator : direct_declarator . RBLEFT identifier_list RBRIGHT  (87)
	direct_declarator : direct_declarator . RBLEFT RBRIGHT  (88)
	function_definition : declaration_specifiers direct_declarator . declaration_list compound_statement  (145)
	function_definition : declaration_specifiers direct_declarator . compound_statement  (146)

	CHAR  shift 2
	SHORT  shift 3
	INT  shift 4
	LONG  shift 5
	FLOAT  shift 6
	DOUBLE  shift 7
	VOID  shift 8
	COMPLEX  shift 9
	BOOL  shift 10
	BRACELEFT  shift 26
	EQUAL  shift 37
	RBLEFT  shift 27
	BRACKETLEFT  shift 28
	SEMICOLON  reduce 69
	COMMA  reduce 69

	type_specifier  goto 13
	declaration  goto 29
	declaration_specifiers  goto 30
	compound_statement  goto 38
	declaration_list  goto 39


state 26
	compound_statement : BRACELEFT . BRACERIGHT  (120)
	compound_statement : BRACELEFT . statement_list BRACERIGHT  (121)
	compound_statement : BRACELEFT . declaration_list BRACERIGHT  (122)
	compound_statement : BRACELEFT . declaration_list statement_list BRACERIGHT  (123)

	IDENTIFIER  shift 40
	CONSTANT  shift 41
	STRING_LITERAL  shift 42
	SIZEOF  shift 43
	INC_OP  shift 44
	DEC_OP  shift 45
	CHAR  shift 2
	SHORT  shift 3
	INT  shift 4
	LONG  shift 5
	FLOAT  shift 6
	DOUBLE  shift 7
	VOID  shift 8
	COMPLEX  shift 9
	BOOL  shift 10
	RE  shift 46
	IM  shift 47
	MOD  shift 48
	CASE  shift 49
	DEFAULT  shift 50
	IF  shift 51
	SWITCH  shift 52
	WHILE  shift 53
	DO  shift 54
	FOR  shift 55
	GOTO  shift 56
	BREAK  shift 57
	RETURN  shift 58
	SEMICOLON  shift 59
	BRACELEFT  shift 26
	BRACERIGHT  shift 60
	RBLEFT  shift 61
	EXCL  shift 62
	MINUS  shift 63
	.  error

	primary_expression  goto 64
	expression  goto 65
	postfix_expression  goto 66
	assignment_expression  goto 67
	unary_expression  goto 68
	cast_expression  goto 69
	type_specifier  goto 13
	multiplicative_expression  goto 70
	additive_expression  goto 71
	shift_expression  goto 72
	relational_expression  goto 73
	equality_expression  goto 74
	and_expression  goto 75
	exclusive_or_expression  goto 76
	inclusive_or_expression  goto 77
	logical_and_expression  goto 78
	logical_or_expression  goto 79
	conditional_expression  goto 80
	declaration  goto 29
	declaration_specifiers  goto 30
	statement  goto 81
	labeled_statement  goto 82
	compound_statement  goto 83
	expression_statement  goto 84
	selection_statement  goto 85
	iteration_statement  goto 86
	jump_statement  goto 87
	statement_list  goto 88
	declaration_list  goto 89


state 27
	direct_declarator : direct_declarator RBLEFT . parameter_list RBRIGHT  (86)
	direct_declarator : direct_declarator RBLEFT . identifier_list RBRIGHT  (87)
	direct_declarator : direct_declarator RBLEFT . RBRIGHT  (88)

	IDENTIFIER  shift 90
	CHAR  shift 2
	SHORT  shift 3
	INT  shift 4
	LONG  shift 5
	FLOAT  shift 6
	DOUBLE  shift 7
	VOID  shift 8
	COMPLEX  shift 9
	BOOL  shift 10
	RBRIGHT  shift 91
	.  error

	type_specifier  goto 13
	declaration_specifiers  goto 92
	parameter_list  goto 93
	identifier_list  goto 94
	parameter_declaration  goto 95


state 28
	direct_declarator : direct_declarator BRACKETLEFT . constant_expression BRACKETRIGHT  (84)
	direct_declarator : direct_declarator BRACKETLEFT . BRACKETRIGHT  (85)

	IDENTIFIER  shift 96
	CONSTANT  shift 41
	STRING_LITERAL  shift 42
	SIZEOF  shift 43
	INC_OP  shift 44
	DEC_OP  shift 45
	RE  shift 46
	IM  shift 47
	MOD  shift 48
	RBLEFT  shift 61
	BRACKETRIGHT  shift 97
	EXCL  shift 62
	MINUS  shift 63
	.  error

	primary_expression  goto 64
	postfix_expression  goto 66
	unary_expression  goto 98
	cast_expression  goto 69
	multiplicative_expression  goto 70
	additive_expression  goto 71
	shift_expression  goto 72
	relational_expression  goto 73
	equality_expression  goto 74
	and_expression  goto 75
	exclusive_or_expression  goto 76
	inclusive_or_expression  goto 77
	logical_and_expression  goto 78
	logical_or_expression  goto 79
	conditional_expression  goto 99
	constant_expression  goto 100


state 29
	declaration_list : declaration .  (124)

	.  reduce 124


state 30
	declaration : declaration_specifiers . SEMICOLON  (63)
	declaration : declaration_specifiers . init_declarator_list SEMICOLON  (64)

	IDENTIFIER  shift 1
	SEMICOLON  shift 22
	RBLEFT  shift 11
	.  error

	init_declarator_list  goto 23
	init_declarator  goto 24
	direct_declarator  goto 101


state 31
	function_definition : direct_declarator compound_statement .  (148)

	.  reduce 148


state 32
	declaration_list : declaration_list . declaration  (125)
	function_definition : direct_declarator declaration_list . compound_statement  (147)

	CHAR  shift 2
	SHORT  shift 3
	INT  shift 4
	LONG  shift 5
	FLOAT  shift 6
	DOUBLE  shift 7
	VOID  shift 8
	COMPLEX  shift 9
	BOOL  shift 10
	BRACELEFT  shift 26
	.  error

	type_specifier  goto 13
	declaration  goto 102
	declaration_specifiers  goto 30
	compound_statement  goto 103


state 33
	translation_unit : translation_unit external_declaration .  (142)

	.  reduce 142


state 34
	direct_declarator : RBLEFT direct_declarator RBRIGHT .  (83)

	.  reduce 83


state 35
	declaration : declaration_specifiers init_declarator_list SEMICOLON .  (64)

	.  reduce 64


state 36
	init_declarator_list : init_declarator_list COMMA . init_declarator  (68)

	IDENTIFIER  shift 1
	RBLEFT  shift 11
	.  error

	init_declarator  goto 104
	direct_declarator  goto 101


state 37
	init_declarator : direct_declarator EQUAL . initializer  (70)

	IDENTIFIER  shift 96
	CONSTANT  shift 41
	STRING_LITERAL  shift 42
	SIZEOF  shift 43
	INC_OP  shift 44
	DEC_OP  shift 45
	RE  shift 46
	IM  shift 47
	MOD  shift 48
	BRACELEFT  shift 105
	RBLEFT  shift 61
	EXCL  shift 62
	MINUS  shift 63
	.  error

	primary_expression  goto 64
	postfix_expression  goto 66
	assignment_expression  goto 106
	unary_expression  goto 68
	cast_expression  goto 69
	multiplicative_expression  goto 70
	additive_expression  goto 71
	shift_expression  goto 72
	relational_expression  goto 73
	equality_expression  goto 74
	and_expression  goto 75
	exclusive_or_expression  goto 76
	inclusive_or_expression  goto 77
	logical_and_expression  goto 78
	logical_or_expression  goto 79
	conditional_expression  goto 80
	initializer  goto 107


state 38
	function_definition : declaration_specifiers direct_declarator compound_statement .  (146)

	.  reduce 146


state 39
	declaration_list : declaration_list . declaration  (125)
	function_definition : declaration_specifiers direct_declarator declaration_list . compound_statement  (145)
